--- a/.hintrc
+++ b/.hintrc
@@ -8,6 +8,14 @@
       {
         "label": "off"
       }
-    ]
+    ],
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off",
+        "link-name": "off"
+      }
+    ],
+    "button-type": "off"
   }
 }
