--- a/.hintrc
+++ b/.hintrc
@@ -3,20 +3,19 @@
     "development"
   ],
   "hints": {
+    "axe/name-role-value": [
+      "default",
+      {
+        "link-name": "off",
+        "button-name": "off"
+      }
+    ],
+    "disown-opener": "off",
     "axe/forms": [
       "default",
       {
         "label": "off"
       }
-    ],
-    "axe/name-role-value": [
-      "default",
-      {
-        "button-name": "off",
-        "link-name": "off"
-      }
-    ],
-    "button-type": "off",
-    "disown-opener": "off"
+    ]
   }
 }
